--- a/src/main/resources/assets/moreice/lang/en_us.json
+++ b/src/main/resources/assets/moreice/lang/en_us.json
@@ -5,11 +5,17 @@
   "block.moreice.ice_slab": "Ice Slab",
   "block.moreice.packed_ice_slab": "Packed Ice Slab",
   "block.moreice.blue_ice_slab": "Blue Ice Slab",
+  "block.moreice.ice_wall": "Ice Wall",
+  "block.moreice.packed_ice_wall": "Packed Ice Wall",
+  "block.moreice.blue_ice_wall": "Blue Ice Wall",
   "item.moreice.ice_stairs": "Ice Stairs",
   "item.moreice.packed_ice_stairs": "Packed Ice Stairs",
   "item.moreice.blue_ice_stairs": "Blue Ice Stairs",
   "item.moreice.ice_slab": "Ice Slab",
   "item.moreice.packed_ice_slab": "Packed Ice Slab",
   "item.moreice.blue_ice_slab": "Blue Ice Slab",
+  "item.moreice.ice_wall": "Ice Wall",
+  "item.moreice.packed_ice_wall": "Packed Ice Wall",
+  "item.moreice.blue_ice_wall": "Blue Ice Wall",
   "tab.mod": "More Ice"
 }
