updates texture for ice bricks and adds brick slabs

--- a/src/main/resources/assets/moreice/lang/en_us.json
+++ b/src/main/resources/assets/moreice/lang/en_us.json
@@ -11,6 +11,9 @@
   "block.moreice.ice_bricks": "Ice Bricks",
   "block.moreice.packed_ice_bricks": "Packed Ice Bricks",
   "block.moreice.blue_ice_bricks": "Blue Ice Bricks",
+  "block.moreice.ice_brick_slab": "Ice Brick Slab",
+  "block.moreice.packed_ice_brick_slab": "Packed Ice Brick Slab",
+  "block.moreice.blue_ice_brick_slab": "Blue Ice Brick Slab",
   "block.moreice.ice_pressure_plate": "Ice Pressure Plate",
   "block.moreice.packed_ice_pressure_plate": "Packed Ice Pressure Plate",
   "block.moreice.blue_ice_pressure_plate": "Blue Ice Pressure Plate",
@@ -26,6 +29,9 @@
   "item.moreice.ice_bricks": "Ice Bricks",
   "item.moreice.packed_ice_bricks": "Packed Ice Bricks",
   "item.moreice.blue_ice_bricks": "Blue Ice Bricks",
+  "item.moreice.ice_brick_slab": "Ice Brick Slab",
+  "item.moreice.packed_ice_brick_slab": "Packed Ice Brick Slab",
+  "item.moreice.blue_ice_brick_slab": "Blue Ice Brick Slab",
   "item.moreice.ice_pressure_plate": "Ice Pressure Plate",
   "item.moreice.packed_ice_pressure_plate": "Packed Ice Pressure Plate",
   "item.moreice.blue_ice_pressure_plate": "Blue Ice Pressure Plate",
