Add working freezer

--- a/src/main/resources/assets/moreice/lang/en_us.json
+++ b/src/main/resources/assets/moreice/lang/en_us.json
@@ -17,6 +17,7 @@
   "block.moreice.ice_pressure_plate": "Ice Pressure Plate",
   "block.moreice.packed_ice_pressure_plate": "Packed Ice Pressure Plate",
   "block.moreice.blue_ice_pressure_plate": "Blue Ice Pressure Plate",
+  "block.moreice.freezer": "Freezer",
   "item.moreice.ice_stairs": "Ice Stairs",
   "item.moreice.packed_ice_stairs": "Packed Ice Stairs",
   "item.moreice.blue_ice_stairs": "Blue Ice Stairs",
