Add ice brick walls

--- a/src/main/resources/assets/moreice/lang/en_us.json
+++ b/src/main/resources/assets/moreice/lang/en_us.json
@@ -14,6 +14,9 @@
   "block.moreice.ice_brick_slab": "Ice Brick Slab",
   "block.moreice.packed_ice_brick_slab": "Packed Ice Brick Slab",
   "block.moreice.blue_ice_brick_slab": "Blue Ice Brick Slab",
+  "block.moreice.ice_brick_wall": "Ice Brick Wall",
+  "block.moreice.packed_ice_brick_wall": "Packed Ice Brick Wall",
+  "block.moreice.blue_ice_brick_wall": "Blue Ice Brick Wall",
   "block.moreice.ice_pressure_plate": "Ice Pressure Plate",
   "block.moreice.packed_ice_pressure_plate": "Packed Ice Pressure Plate",
   "block.moreice.blue_ice_pressure_plate": "Blue Ice Pressure Plate",
@@ -33,6 +36,9 @@
   "item.moreice.ice_brick_slab": "Ice Brick Slab",
   "item.moreice.packed_ice_brick_slab": "Packed Ice Brick Slab",
   "item.moreice.blue_ice_brick_slab": "Blue Ice Brick Slab",
+  "item.moreice.ice_brick_wall": "Ice Brick Wall",
+  "item.moreice.packed_ice_brick_wall": "Packed Ice Brick Wall",
+  "item.moreice.blue_ice_brick_wall": "Blue Ice Brick Wall",
   "item.moreice.ice_pressure_plate": "Ice Pressure Plate",
   "item.moreice.packed_ice_pressure_plate": "Packed Ice Pressure Plate",
   "item.moreice.blue_ice_pressure_plate": "Blue Ice Pressure Plate",
