--- a/src/main/resources/assets/moreice/lang/en_us.json
+++ b/src/main/resources/assets/moreice/lang/en_us.json
@@ -20,6 +20,9 @@
   "block.moreice.ice_pressure_plate": "Ice Pressure Plate",
   "block.moreice.packed_ice_pressure_plate": "Packed Ice Pressure Plate",
   "block.moreice.blue_ice_pressure_plate": "Blue Ice Pressure Plate",
+  "block.moreice.ice_button": "Ice Button",
+  "block.moreice.packed_ice_button": "Packed Ice Button",
+  "block.moreice.blue_ice_button": "Blue Ice Button",
   "block.moreice.freezer": "Freezer",
   "item.moreice.ice_stairs": "Ice Stairs",
   "item.moreice.packed_ice_stairs": "Packed Ice Stairs",
@@ -42,6 +45,9 @@
   "item.moreice.ice_pressure_plate": "Ice Pressure Plate",
   "item.moreice.packed_ice_pressure_plate": "Packed Ice Pressure Plate",
   "item.moreice.blue_ice_pressure_plate": "Blue Ice Pressure Plate",
+  "item.moreice.ice_button": "Ice Button",
+  "item.moreice.packed_ice_button": "Packed Ice Button",
+  "item.moreice.blue_ice_button": "Blue Ice Button",
   "container.moreice.freezer": "Freezer",
   "tab.mod": "More Ice"
 }
