Add Fabric support

--- a/common/src/main/resources/assets/moreice/lang/en_us.json
+++ b/common/src/main/resources/assets/moreice/lang/en_us.json
@@ -23,6 +23,9 @@
   "block.moreice.ice_button": "Ice Button",
   "block.moreice.packed_ice_button": "Packed Ice Button",
   "block.moreice.blue_ice_button": "Blue Ice Button",
+  "block.moreice.chiseled_ice": "Chiseled Ice",
+  "block.moreice.chiseled_packed_ice": "Chiseled Packed Ice",
+  "block.moreice.chiseled_blue_ice": "Chiseled Blue Ice",
   "block.moreice.freezer": "Freezer",
   "item.moreice.ice_stairs": "Ice Stairs",
   "item.moreice.packed_ice_stairs": "Packed Ice Stairs",
